k8s/manifests/users-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users-api
        image: acrwedosmpdev.azurecr.io/users-api:15
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-secret
