k8s/manifests/users-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
